feat: Add auto-refill service with Telegram bot integration
- Add auto_refill.ts: Standalone service for monitoring and refilling RSCs
- Add telegram_bot_autorefill.ts: Enhanced bot with auto-refill integration
- Add check_all_balances.ts: Comprehensive balance checker for wallet & RSCs
- Add fund_all_rscs.ts: Manual funding script with debt coverage
- Update package.json with npm scripts for all operations
- Update README.md with auto-refill documentation and npm scripts
- Update TELEGRAM_BOT.md with new commands (/balance, /refill, /autorefill)

New npm scripts:
- npm run check:balance - Check all balances
- npm run fund:rscs - Fund RSCs and cover debt
- npm run auto:refill - Standalone auto-refill service
- npm run bot:autorefill - Telegram bot with auto-refill
- npm run bot - Basic Telegram bot

Auto-refill features:
- Monitors RSC balances every 60 seconds
- Auto-converts SepETH to REACT via faucet (1:100 ratio)
- Auto-funds RSCs when balance drops below 2 REACT
- Covers debt to reactivate inactive RSCs
- Sends Telegram alerts for all actions

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "check:balance": "hardhat run scripts/check_all_balances.ts --network sepolia",
+    "fund:rscs": "hardhat run scripts/fund_all_rscs.ts --network reactive",
+    "auto:refill": "hardhat run scripts/auto_refill.ts --network reactive",
+    "bot": "hardhat run scripts/telegram_bot_3feed.ts --network sepolia",
+    "bot:autorefill": "hardhat run scripts/telegram_bot_autorefill.ts --network sepolia",
+    "deploy:multi": "hardhat run scripts/deploy_multi_feed_v2.ts",
+    "check:multi": "hardhat run scripts/check_multi_feed_status.ts --network sepolia"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
