docs: Improve frontend .env.example with Alchemy key instructions
- Add commented examples showing how to use Alchemy/Infura keys
- Clarify that public RPCs are rate-limited fallbacks
- Environment variables properly configured in config.ts via getEnvVar()

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,12 @@
 # Copy to .env.local for local development
 # Set in Vercel dashboard for production
 
-# RPC URLs (optional - public RPCs used as fallback)
+# RPC URLs (optional - public RPCs used as fallback if not set)
+# For better performance, use your own Alchemy/Infura keys:
+# VITE_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+# VITE_BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
+
+# Public RPC fallbacks (rate-limited):
 VITE_SEPOLIA_RPC_URL=https://rpc.ankr.com/eth_sepolia
 VITE_BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 VITE_REACTIVE_RPC_URL=https://lasna-rpc.rnk.dev/
